<resources>
    <string name="app_name">GithubKotlin</string>
    <string name="title_activity_home">Home</string>
    <string name="hint_txtpass">********</string>
    <string name="hint_userna">Username</string>
    <string name="label_passw">Password</string>
    <string name="label_user">Username</string>
    <string name="btntxt_login">Login</string>
    <string name="label_forgot">Forgot Password?</string>
    <string name="btntxt_createa">Create Account</string>
    <string name="lbl_info">Mountain View Golf Course</string>
    <string name="txt_btn_home">New Round</string>
    <string name="lbl_name">John Doe</string>
    <string name="correo">John.doe@gmail.com</string>
    <string name="num1">11.4</string>
    <string name="num2">84.7</string>
    <string name="num3">77</string>
    <string name="txt_point1">Handicap</string>
    <string name="txt_point3">low Score</string>
    <string name="txt_stats">Stats</string>
    <string name="txt_photos">Photos</string>
    <string name="txt_conx">Connection</string>
</resources>
